<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="com.example.android.quiz.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/nameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:layout_marginBottom="16dp"
            android:hint="@string/edit_text_hint_text"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q1"
            android:textSize="18sp"
            android:layout_marginTop="16dp"
            />

        <RadioGroup
            android:id="@+id/radio_q1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/q1_option1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginRight="24dp"
                android:checked="false"
                android:paddingLeft="10dp"
                android:text="@string/q1_option1"
                android:textSize="15sp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"/>

            <RadioButton
                android:id="@+id/q1_option2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginRight="24dp"
                android:checked="false"
                android:paddingLeft="10dp"
                android:text="@string/q1_option2"
                android:textSize="15sp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"/>

            <RadioButton
                android:id="@+id/q1_option3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginRight="24dp"
                android:checked="false"
                android:paddingLeft="10dp"
                android:text="@string/q1_option3"
                android:textSize="15sp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"/>

        </RadioGroup>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q2"
            android:textSize="18sp"
            android:layout_marginTop="16dp"
            />

        <RadioGroup
            android:id="@+id/radio_q2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/q2_option1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginRight="24dp"
                android:checked="false"
                android:paddingLeft="10dp"
                android:text="@string/q2_option1"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"/>

            <RadioButton
                android:id="@+id/q2_option2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginRight="24dp"
                android:checked="false"
                android:paddingLeft="10dp"
                android:text="@string/q2_option2"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"/>

            <RadioButton
                android:id="@+id/q2_option3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginRight="24dp"
                android:checked="false"
                android:paddingLeft="10dp"
                android:text="@string/q2_option3"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"/>


        </RadioGroup>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q3"
            android:textSize="18sp"
            android:layout_marginTop="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q3_option"
            android:paddingLeft="15dp"
            android:layout_marginTop="10dp"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/q3_answer"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edit_text"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="4.) Which of these is a valid view class in android?"
            android:textSize="18dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="10dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/q4_option1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q4_option1"
                    android:layout_marginLeft="10dp"/>


                <CheckBox
                    android:id="@+id/q4_option2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q4_option2"
                    android:layout_marginLeft="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/q4_option3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q4_option3"
                    android:layout_marginLeft="10dp"/>


                <CheckBox
                    android:id="@+id/q4_option4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q4_option4"
                    android:layout_marginLeft="10dp"/>

            </LinearLayout>



        </LinearLayout>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q5"
            android:textSize="18sp"
            android:layout_marginTop="16dp"
            />

        <RadioGroup
            android:id="@+id/radio_q5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/q5_option1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginRight="24dp"
                android:checked="false"
                android:paddingLeft="10dp"
                android:text="@string/q5_option1"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"/>

            <RadioButton
                android:id="@+id/q5_option2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginRight="24dp"
                android:checked="false"
                android:paddingLeft="10dp"
                android:text="@string/q5_option2"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"/>

            <RadioButton
                android:id="@+id/q5_option3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginRight="24dp"
                android:checked="false"
                android:paddingLeft="10dp"
                android:text="@string/q5_option3"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"/>


        </RadioGroup>








    </LinearLayout>



</ScrollView>
